# juniper-demo

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  local-db.sh  local-start.sh  run.sh  stop.sh
src/: db.rs  graphql.rs  main.rs
